move date selection to main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
-    <string name="app_name">Vorlesungsplan DHBW</string>
-    <string name="base_url">https://rapla.dhbw-stuttgart.de/rapla?key=</string>
+    <string name="app_name">Vorlesungsplan DHBW</string>s
     <string name="title_activity_settings">Einstellungen</string>
 
     <!-- Strings related to Settings -->
     <string name="key_dhbwkey">dhbwkey</string>
-    <string name="title_dhbwkey">DHBW Key</string>
-    <string name="summary_dhbwkey">Füge hier den Key aus der DHBW Vorlesungsplan-URL ein</string>
+    <string name="title_dhbwkey">DHBW URL</string>
+    <string name="summary_dhbwkey">Füge hier die URL des DHBW Vorlesungsplans ein</string>
 </resources>
