--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">Vorlesungsplan DHBW</string>s
     <string name="title_activity_settings">Einstellungen</string>
+    <string name="title_activity_about">Informationen</string>
 
     <!-- Strings related to Settings -->
     <string name="key_dhbwkey">dhbwkey</string>
     <string name="title_dhbwkey">DHBW URL</string>
     <string name="summary_dhbwkey">Füge hier die URL des DHBW Vorlesungsplans ein</string>
-    <string name="title_activity_about">AboutActivity</string>
 </resources>
