Revert "improve design"
This reverts commit 8e3c3f672a22c0958d3c296e919cdb0210bf5856.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,7 @@
     <string name="title_activity_about">Informationen</string>
 
     <!-- Strings related to Settings -->
-    <string name="header_title">Allgemein</string>
-    <string name="key_dhbwurl">dhbwurl</string>
-    <string name="title_dhbwurl">DHBW Vorlesungsplan URL</string>
-    <string name="summary_dhbwurl">Füge hier die URL deines DHBW Vorlesungsplans ein</string>
+    <string name="key_dhbwkey">dhbwkey</string>
+    <string name="title_dhbwkey">DHBW URL</string>
+    <string name="summary_dhbwkey">Füge hier die URL des DHBW Vorlesungsplans ein</string>
 </resources>
