add url sanitizing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Vorlesungsplan DHBW</string>s
+    <string name="app_name">DHBW Vorlesungsplan</string>s
     <string name="title_activity_settings">Einstellungen</string>
     <string name="title_activity_about">Informationen</string>
 
